# minting_site

./: Cargo.toml  build.sh  deploy.js  package-lock.json  package.json
airdrop/: airdrop_nft.js  check_whitelist.js  info.json  mint_nft.js  owner.json  query.js  send_airdrop.js  test.js  token_id.json  topholder.json  whitelist.json
airdrop/metadata/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
contracts/astro-game/: Cargo.toml
contracts/astro-game/examples/: schema.rs
contracts/astro-game/schema/: config_response.json
contracts/astro-game/src/: asset.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/astro-game/src/testing/: config_test.rs  create_pool.rs  instantiate_test.rs  mod.rs  register_pool.rs
contracts/astro-nft-base/: Cargo.toml
contracts/astro-nft-base/schema/: all_nft_info_response.json  execute_msg.json  nft_info_response.json
contracts/astro-nft-base/src/: contract.rs  error.rs  execute.rs  query.rs  state.rs  test.rs
contracts/minting-site/: Cargo.toml
contracts/minting-site/examples/: schema.rs
contracts/minting-site/schema/: execute_msg.json  instantiate_msg.json
contracts/minting-site/src/: contract.rs  contract_test.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/rest-nft-base/: Cargo.toml
contracts/rest-nft-base/.cargo/: config
contracts/rest-nft-base/schema/: execute_msg.json  query_msg.json
contracts/rest-nft-base/src/: contract.rs  execute.rs  query.rs  state.rs
