[package]
name = "minting-site"
version = "0.1.0"
authors = ["Vernon Johnson <vtj2105@columbia.edu>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.4
"""

[dependencies]
cw0 = { version = "0.9.1" }
cw2 = { version = "0.9.1" }
cw20 = { version = "0.9.1" }
cosmwasm-std = { version = "0.16.0" }
cw721 = {  version = "0.9.2" }
cw721-base = {  version = "0.9.2", features = ["library"] }
cw-storage-plus = { version = "0.9.1" }
schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }


[dev-dependencies]
cosmwasm-schema = "0.16.0"
serde_json = "1.0"
